# baka

./: CHANGELOG.md  Makefile  baka.cabal  cabal.project  flake.nix
app/: baka.hs
etc/: space-startups.html
src/: Amz.hs  BinaryTree.hs  Grid.hs  List.hs  Magic.hs  Maze.hs  NinetyNine.hs  River.hs  RiverSkip.hs
src/Baka/: Amz.hs  Grid.hs  Maze.hs  NinetyNine.hs  River.hs  RiverSkip.hs
src/Hr/: Dir.hs  Dna.hs  Maximize.hs  Parens.hs
