cabal-version:        3.4
name:                 baka
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               Michael Lee
maintainer:           metaml@gmail.com
category:             Baka
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Baka.Amz
                    , Baka.Grid
                    , Baka.Maze
                    , Baka.NinetyNine
                    , Baka.River
                    , Baka.RiverSkip
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , PatternSynonyms
                    , PolyKinds
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , StrictData
                    , TemplateHaskell
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
  build-depends:      base ^>=4.14.1.0
                    , containers
                    , lens
                    , random

executable baka
  main-is:          baka.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
                  , baka
